# dmacs

./: .gitignore  Cargo.toml  GEMINI.md  README.md  TASK_COMMAND_SPEC.md  TASK_COMMAND_TODO.md
.github/workflows/: release.yml
src/: backup.rs  config.rs  document.rs  editor.rs  error.rs  lib.rs  main.rs  persistence.rs  terminal.rs
src/editor/: actions.rs  checkbox.rs  clipboard.rs  command.rs  comment.rs  fuzzy_search.rs  indent.rs  input.rs  mod.rs  scroll.rs  search.rs  selection.rs  state.rs  task.rs  ui.rs  undo.rs
tests/: backup_test.rs  document_test.rs  editor_cursor_movement_test.rs  editor_insertion_deletion_test.rs  editor_kill_yank_test.rs  editor_line_movement_test.rs  editor_misc_test.rs  editor_scrolling_test.rs  editor_search_test.rs  editor_test.rs  editor_undo_test.rs  persistence_test.rs
tests/editor/: checkbox_test.rs  command_test.rs  comment_test.rs  cursor_movement_test.rs  delimiter_movement_test.rs  fuzzy_search_test.rs  indent_test.rs  insertion_deletion_test.rs  kill_yank_test.rs  line_movement_test.rs  misc_test.rs  mod.rs  scrolling_test.rs  search_test.rs  selection_test.rs  task_command_test.rs  undo_test.rs
