[package]
name = "dmacs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
ctrlc = { version = "3.4", features = ["termination"] }
dirs = "5.0.1"
libc = "0.2.153"
log = "0.4"
pancurses = { version = "0.17.0", features = ["wide"] }
unicode-width = "0.2.1"
simplelog = "0.12.2"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10.1"
uuid = { version = "1.0", features = ["v4"] }

[lib]
name = "dmacs"
path = "src/lib.rs"

[[test]]
name = "editor_tests"
path = "tests/editor/mod.rs"

[[test]]
name = "backup_tests"
path = "tests/backup_test.rs"
